# zoho_internship

./: README.md
resources/: abdul_resume.docx  session1.txt  session2.txt  session3.txt  session4.txt
resources/task1/: ouput.cpp  question.txt
resources/task1/practise/: diamond_problem  diamond_problem.cpp  directory iterator.cpp  exceptioncpp  filecount.cpp  gitkey  lqmbda.cpp  staticDynamic_binding  staticDynamic_binding.cpp  threads.cpp
resources/task2/: answer.py  pytest.py  questions.txt  slice.py  test1_math_fun.py
resources/task2/ptactise/: multithreading.py  pyfiles.py  pytest.py  pytest1.py  slice1.py  test_newpy.py  testing.py  unittest1.py
resources/task3/: questions
resources/task3/practise/: environment.yml  references.txt
resources/task4/: question2.txt  questions.txt  unstructued_data2.py.ipynb
resources/task4/answer/: answer2_updated.ipynb  binder.cpp  mnist_dataset.ipynb  pybind.py  task4.cpp  task4.hpp  unstructued_data2.py.ipynb
resources/task4/practise/: grad_decent.py.ipynb  numpy.ipynb  references.txt  unstructured.py.ipynb
resources/task5/: questions.txt
resources/task5/answer/: cpu_vs_gpu.ipynb  with_hidden_layer.ipynb
resources/task5/practise/: references.txt  sample.py.ipynb  task5_roughpractise.ipynb  unstrcturedtext_task5.ipynb
resources/task6/: questions.txt  references.txt
resources/task6/practise/: cnn1.ipynb  cnn2.ipynb  torchnn.py
resources/task7/: references.txt
resources/task8/practise/: call.py  (+3 more)
resources/task8/practise/task_op/: pyproject.toml
resources/task8/practise/task_op/embedder/: module.py
(+2 files in other folders)
