
[tool.poetry]
name = "embedder"
version = "0.1.0"
description = ""
authors = ["Khadarnit180 <abdulkhadar.s_ece2019@svec.edu.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
